--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #171717;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +11,42 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header {
+  width: 100%;
+  background-color: black;
+  height: 10vh;
+  color: #3dafdb;
+}
+
+.App {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+
+.header {
+  margin-left: 3%;
+}
+
+.header-color {
+  margin-left: 3%;
+  color: white;
+}
+
+.info {
+  margin-top: 0;
+  padding-right: 3%;
+}
+
+.Item {
+  color: white;
+  margin-left: 3%;
+  display: flex;
+  flex-direction: column;
 }
