--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,15 @@ header {
   background-color: black;
   height: 10vh;
   color: #3dafdb;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+img {
+  max-width: 50px;
+  max-height: 50px;
+  padding-left: 1%;
 }
 
 .App {
